src/test/deca/syntax/valid/no_Main.deca
// Description:
//    test du syntax d'un programme sans Main
//
// Resultats:
//   
//
// Historique:
//    cree le 22/01/2022

